--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ APP_SECRET=
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://root:@Prathibha123@127.0.0.1:3306/php"
+DATABASE_URL="mysql://root:@pd@127.0.0.1:3306/php"
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
